:ribbon: :christmas_tree: Changing model of album, not it has artist name
